Mejora del Home, Login y Regiter listo

--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -19,7 +19,7 @@
         <nav class="container-main">
             <div class="nav-left">
                 <div class="logo-main">
-                    <a href="#"><img src="{% static 'IMG/logo_reieee_uni_2.png' %}" height="90px" width="270px"></a>
+                    <img src="{% static 'IMG/logo_reieee_uni_2.svg' %}">
                 </div>
                 <div class="nav-search">
                     <form action="#">
@@ -28,17 +28,21 @@
                     </form>
                 </div>
                 <div class="nav-log-reg">
-                    <a href="">Login</a>
-                    <a href="">Register</a>
+                    <div class="nav-login">
+                        <a class="boton-1" href="/login">Login</a>
+                    </div>
+                    <div class="nav-register"> 
+                        <a href="/register">Register</a></li>
+                    </div>
                 </div>
             </div>
             <div class="nav-right">
                 <div class="nav-tools">
                     <ul>
-                        <li>Home</li>
-                        <li>Nuevo</li>
-                        <li>Capítulos</li>
-                        <li>Grupos de Afinidad</li>
+                        <li class="hovera-1">Home</li>
+                        <li class="hovera-1">Nuevo</li>
+                        <li class="hovera-1">Capítulos</li>
+                        <li class="hovera-1">Afinidad</li>
                     </ul>
                 </div>
                 
