--- a/app1/static/CSS/style.css
+++ b/app1/static/CSS/style.css
@@ -1,6 +1,8 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
@@ -11,20 +13,51 @@
 }
 
 /* =============HEADER=========== */
-.container-main{
+
+header{
+    width: 100%;
+    height: 100px;
+    position:sticky;
+    top: 0;
+    right: 0;
+    z-index: 100;
     background-color: var(--secundary-color);
 }
 
-.logo-main{
-    margin: 20px;
+
+.container-main{
+    display: flex;
+    flex-direction: column;
+    max-width: 1500px;
+    height: 100%;
+    padding: 10px 20px;
+}
+
+header .logo-main{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.logo-main img{
+    width: 260px;
 }
 
 
 .nav-left{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    margin:auto;
+    padding: auto 20px;
 }
 
+
+.nav-tools{
+    background-color: var(--secundary-color);
+}
 .nav-tools ul{
     display: flex;
     flex-direction: row;
@@ -33,12 +66,21 @@
 
 .nav-tools ul li{
     color: var(--three-color);
-    padding: 0px 30px;
+    /* padding: 10px; */
     list-style: none;
-
+    width: 80px;
+    height: 20px;
+    text-align: center;
 }
+.hovera-1:hover {
+    color: var(--secundary-color);
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    width: 80px;
+    border: 2px solid var(--primary-color);
+}
+
 .nav-search{
-    margin: 10px;
     padding: 25px;
 }
 
@@ -56,33 +98,198 @@
     background-color: var(--primary-color);
     border: 2px solid var(--primary-color);
     color: var(--secundary-color);
+    font-size: 15px;
 }
 
-.nav-log-reg a{
-    text-decoration: none;
-    color:var(--primary-color);
-    background-color: var(--secundary-color);
+.nav-log-reg{
+    display: flex;
+    flex-direction: row;
+    padding: 25px;
+}
+/* ============ */
+
+/* .nav-login ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+.nav-login {
+    list-style-type: none;
+    height: 40px;
+    width: 80px;
+    border-radius: 20px;
+    padding-top: 10px;
+    padding-left: 1.8px;
+}
+
+.boton-1{
+    color: var(--primary-color);
+    font-size: 15px;
+    margin-top: 50px;
+    padding: 10px 20px;
+    border-radius: 20px;
     border: 2px solid var(--primary-color);
-    border-radius: 100px;
-}
-/* =============MAIN=========== */
-body{
-    width: 100vw;
 }
 
+.boton-1:hover{
+    background: var(--primary-color);
+    color: var(--secundary-color) ;
+}
+
+
+.nav-register {
+    list-style-type: none;
+    height: 40px;
+    width: 80px;
+    border: 2px solid var(--secundary-color);
+    border-radius: 20px;
+    padding-top: 7px;
+    padding-left: 3px;
+}
+
+
+.nav-register a{
+    color:var(--primary-color);
+    font-size: 15px;
+    height: 40px;
+    width: 80px;
+}
+
+.nav-register{
+    margin-left: 15px;
+}
+
+
+/* =============MAIN=========== */
 
 main{
-    width: 100vw;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     overflow: hidden;
-    margin-left: 30px;
-    margin-right: 30px;
+}
+/* ======= CAROUSEL========= */
+
+.container-products{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+  /* Slideshow container */
+.slideshow-container {
+    max-width: 100vw;
+    max-height: 100vh;
+    position: relative;
+    margin: auto;
+}
+
+  /* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+  /* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+  /* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+  /* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+  /* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+  /* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+  /* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+#dot-id{
+    text-align:center; 
+    width:100vw;
+    padding: 20px;
 }
 
 
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+  /* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-fill-mode: forwards;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+
+
+/* ==================CARD============== */
+
+.wrap-style{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
 
 
 .card{
