--- a/app1/templates/register.html
+++ b/app1/templates/register.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>Registro</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'IMG/favicon-logo.png' %}">
 </head>
 <body>
     <div class="container-1">
@@ -80,6 +81,7 @@
                 </div>
                 <div class="ml-5 form-group w-25">
                     <label for="formGroupExampleInput">Departamento</label>
+                    <!-- ADJUNTAR LINK DE GITHUB DEL CREADOR: ##################### -->
                     <select name="selectDepartamento" class="form-control">
                         <option value="">Seleccione</option>
                         <option value="Amazonas">Amazonas</option>
