--- a/app1/static/CSS/style.css
+++ b/app1/static/CSS/style.css
@@ -51,12 +51,15 @@ header .logo-main{
     flex-direction: row;
     justify-content: space-between;
     margin:auto;
+    /* width: 100vw; */
     padding: auto 20px;
 }
 
 
 .nav-tools{
     background-color: var(--secundary-color);
+    position: relative;
+    top: -2px;
 }
 .nav-tools ul{
     display: flex;
@@ -169,19 +172,49 @@ main{
     justify-content: center;
     flex-wrap: wrap;
     overflow: hidden;
+    padding-top: 50px;
 }
-/* ======= CAROUSEL========= */
 
-.container-products{
+
+#main-card{
+    width: 50vw;
+    margin: 2vh 25vw;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    
 }
+
+.buttom-2{
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    background-color: white;
+    color: var(--primary-color);
+    border-radius: 5px;
+    padding: 10px;
+    border: 2px solid var(--primary-color); /* Green */
+}
+
+.buttom-2:hover {
+    background-color: var(--primary-color); /* Green */
+    color: white;
+}
+
+
+/* ======= CAROUSEL========= */
+
+/* .container-products{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+} */
 
   /* Slideshow container */
 .slideshow-container {
     max-width: 100vw;
-    max-height: 100vh;
+    max-height: 150vh;
     position: relative;
     margin: auto;
 }
@@ -295,7 +328,7 @@ main{
 .card{
     display: grid;
     grid-template-columns: 300px;
-    grid-template-rows: 210px 210px 80px;
+    grid-template-rows: 210px 150px 70px;
     grid-template-areas: "image" "text" "buttom";
 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -323,6 +356,7 @@ main{
 .card-text{
     grid-area: text;
     margin: 20px;
+    width: 180px;
 }
 
 .card-text .price{
@@ -342,4 +376,7 @@ main{
 
 .card-buttom{
     grid-area: buttom;
+}
+.card-buttom-2{
+    margin-right: 15px;
 }
