--- a/app1/templates/home.html
+++ b/app1/templates/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Ecommerce-Home</title>
     {% load static %}
+    <link rel="icon" type="image/x-icon" href="{% static 'IMG/favicon-logo.png' %}">
     <link rel="stylesheet" href="{% static 'CSS/style.css' %}"> 
     <!-- CSS only -->
 </head>
@@ -33,10 +34,14 @@
                         <a href="/logout"><button type="button" class="btn btn-outline-primary">Logout</button></a>
                     </div>
                 </div>
+                <div class="nav-carrito-compras">
+                    <p style="margin-left: 13px;">{{ len_products }}</p>
+                    <img src="{% static 'IMG/carrito-compras-icon.svg' %}" width="25vh" style="margin-left: 2px;">
+                </div>
             </div>
             <div class="nav-tools">
                     <ul>
-                        <li class="hovera-1">Home</li>
+                        <li class="hovera-1"><a href="/" style="text-decoration:none; color: #41413f;">Home</a></li>
                         <li class="hovera-1">Nuevo</li>
                         <li class="hovera-1">Capítulos</li>
                         <li class="hovera-1">Afinidad</li>
@@ -44,29 +49,26 @@
             </div>
         </nav>
     </header>
-    <main>
-        <!-- Slideshow container -->
+    <main>   
         <div class="slideshow-container">
-            <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
             <div class="numbertext">1 / 3</div>
-            <img src="https://www.w3schools.com/howto/img_snow_wide.jpg" style="width:100%">
+            <img src="../static/IMG/imagen_carrusel_1.png" style="width:100%">
             <div class="text">Caption Text</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">2 / 3</div>
-            <img src="https://www.w3schools.com/howto/img_nature_wide.jpg" style="width:100%">
+            <img src="../static/IMG/imagen_carrusel_2.png" style="width:100%">
             <div class="text">Caption Two</div>
             </div>
         
             <div class="mySlides fade">
             <div class="numbertext">3 / 3</div>
-            <img src="https://www.w3schools.com/howto/img_mountains_wide.jpg" style="width:100%">
+            <img src="../static/IMG/imagen_carrusel_3.png" style="width:100%">
             <div class="text">Caption Three</div>
             </div>
-        
-            <!-- Next and previous buttons -->
+
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
@@ -78,28 +80,27 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
         </div>
-        <div class="container-products wrap-style">
+        <!-- <div class="container-products wrap-style"> -->
                 {% for i in products %}
-                <div class="card">
-                    <div class="card-image">
-                        <!-- <h4>{{i.image}}</h4> -->
-                        <img src="../../media/{{i.image}}" alt="" class="image-resize"></p>
+                    <div class="card">
+                        <div class="card-image">
+                            <!-- <h4>{{i.image}}</h4> -->
+                            <img src="../../media/{{i.image}}" alt="" class="image-resize"></p>
+                        </div>
+                        <div class="card-text">
+                            <h2>{{i.nombre}}</h2>
+                            <p>Stock: {{i.stock}}</p>
+                            <span class="price">S/{{i.price}}</span>
+                        </div>
+                        <div class="card-buttom">
+                            <form action="/addToCard/{{i.id}}/" method="POST">
+                                {% csrf_token %}
+                                <input type="submit" class="buttom-2" value="Ver Producto">
+                            </form>
+                        </div>
                     </div>
-                    <div class="card-text">
-                        <h2>{{i.nombre}}</h2>
-                        <p>Description: {{i.description}}</p>
-                        <p>Stock: {{i.stock}}</p>
-                        <span class="price">S/{{i.price}}</span>
-                    </div>
-                    <div class="card-buttom">
-                        <form action="/addToCard/{{i.id}}/" method="POST">
-                            {% csrf_token %}
-                            <input type="submit" value="Enviar">
-                        </form>
-                    </div>
-                </div>
                 {% endfor %}
-        </div>
+        <!-- </div> -->
     </main>
     <footer>
 
